# gongbi

./: Cargo.toml  README.md
.github/workflows/: doc.yaml
doc/: book.toml
doc/src/: SUMMARY.md  chapter_0.md  chapter_1.md
examples/: mpg_line.rs  mpg_point.rs
src/: aes.rs  data.rs  geom.rs  label.rs  layer.rs  lib.rs
src/aes/: color.rs  palette.rs  plaette.rs
src/data/: polars.rs
src/geom/: line.rs  point.rs
src/layer/: geom.rs
src/layer/geom/: line.rs  point.rs
